# powfacpy

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.json  sitemap.xml
docs/: Makefile  index.html  index.qmd  ipynb2qmd.py  make.bat  references.bib
docs/docs/: how_to_contribute.html  how_to_contribute.qmd  overview.html  overview.qmd  release_notes.html  release_notes.qmd  structure_of_powfacpy.html  structure_of_powfacpy.qmd
docs/doctrees/: api.doctree  environment.pickle  how_to_contribute.doctree  index.doctree  introduction.doctree  tutorials.doctree
docs/html/: .buildinfo  api.html  genindex.html  how_to_contribute.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  tutorials.html
docs/source/: conf.py  how_to_contribute.rst  introduction.rst  tutorials.rst
docs/tutorials/: .gitignore  cgmes_model_exchange.html  cgmes_model_exchange.qmd  database.html  getting_started.html  getting_started.qmd  ipynb2qmd.py  network_matrices_and_pandapower_interface.html  network_matrices_and_pandapower_interface.qmd  overview.html  overview.qmd  simulation_and_plotting.html  (+5 more)
power_factory_objects/: CopyOfObjectsInTableOfContentsOfScriptingReference.txt
powerfactory_projects/: powfacpy_tests.pfd
result_variables/: ElmArea.txt  ElmAsm.txt  ElmAsmsc.txt  ElmBoundary.txt  ElmCoup.txt  ElmGenstat.txt  ElmIac.txt  ElmLne.txt  ElmLod.txt  ElmLodlv.txt  ElmLodmv.txt  ElmPvsys.txt  ElmSecctrl.txt  ElmShnt.txt  ElmSind.txt  ElmStactrl.txt  ElmSym.txt  ElmTerm.txt  ElmTr2.txt  ElmTr3.txt  ElmVac.txt  ElmVsc.txt  ElmVscmono.txt  ElmXnet.txt  ElmZone.txt  ElmZpu.txt  StaPll.txt
tests/: conftest.py  test_active_project_interface.py  test_base.py  test_base_interface.py  test_case_studies.py  test_database_interface.py  test_dyn_sim_interface.py  test_functional_interface.py  test_model_exchange_interface.py  test_model_exchange_interfaces.py  test_network_interface.py  test_plot_interface.py  test_results_interface.py  test_script_interface.py
tutorials/: cgmes_model_exchange.html  cgmes_model_exchange.ipynb  getting_started.html  getting_started.ipynb  performance_tests.ipynb  simulation_and_plotting.html  simulation_and_plotting.ipynb  study_cases.html  study_cases.ipynb
(+109 files in other folders)
