[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powfacpy"
version = "0.0.4"
authors = [
  { name="Sciemon", email="simon.eberlein@gmx.de" },
]
description = "PowerFactory wrapper"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas > 1",
    "matplotlib > 1",
]

[project.urls]
"Homepage" = "https://github.com/FraunhIEE-UniKassel-PowSysStability/powfacpy"
"Bug Tracker" = "https://github.com/FraunhIEE-UniKassel-PowSysStability/powfacpy/issues"